[package]
name = "kvs"
version = "0.1.0"
authors = ["Ian Gregson <ian@gregson.me>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = "2.33.0"
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.5"
serde = "1.0.104" 
serde_json = "1.0.48"
